--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Name Designer for Hire</title>
 </head>
 <body>
+  
 <nav>
 <a href="#">Name | Designer for Hire</a>
 <ul>
@@ -12,6 +13,8 @@
 <li><a href="about.html">About</a></li>
 <li><a href="contact.html">Contact</a></li>
 </ul>
+</nav>
+  
 <h1>What can I create fot you?</h1>
 <p>Here is my portfolio, please look around</p>
 <footer>Copyright 2019. Handcoded with care.</footer>
